--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
                     };
 
                     // Send request to FastAPI backend
-                    fetch("http://127.0.0.1:8000/predict", {
+                    fetch("https://race-staregy-optimizer-mlop.onrender.com/predict", {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json"
